--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc --reporter=lcov node_modules/.bin/ava tests/ --verbose"
   },
   "keywords": [
     "js",
@@ -20,6 +20,9 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "ava": "^0.25.0",
+    "nodemon": "^1.18.4",
+    "nyc": "^13.1.0",
+    "supertest": "^3.3.0"
   }
 }
